--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -154,11 +154,11 @@
    </nav>
    <div class="header-nav ms-auto">
       <ul class="d-flex gap-4 align-items-center">
-         <li> <a routerLink="pages-membership-form">Membership</a></li>
-         <li> <a routerLink="pages-policy-adovcacy"> Policy Adovcacy</a></li>
-         <li> <a routerLink="pages-regulaltory-support">Regulaltory Support</a> </li>
-         <li> <a routerLink="pages-schemes-and-subsidies"> Schemes & Subsidies</a></li>
-         <li> <a routerLink="pages-our-services">Our Services</a></li>
+         <li> <a routerLink="membership-form">Membership</a></li>
+         <li> <a routerLink="policy-adovcacy"> Policy Adovcacy</a></li>
+         <li> <a routerLink="regulaltory-support">Regulaltory Support</a> </li>
+         <li> <a routerLink="schemes-&-subsidies"> Schemes & Subsidies</a></li>
+         <li> <a routerLink="our-services">Our Services</a></li>
       </ul>
    </div>
 </header>
