--- a/src/app/pages/pages-our-services/pages-our-services.component.html
+++ b/src/app/pages/pages-our-services/pages-our-services.component.html
@@ -1,13 +1,13 @@
 <main class="main" id="main">
    
-   <div class="banner">
+   <!-- <div class="banner">
       <div class="banner-title">
          <h4>Our Service</h4>
       </div>
       <div class="banner-subtitle">
          <h6>Building products is not our only job. We care about our clients.</h6>
       </div>
-   </div>
+   </div> -->
 
    <div class="pagetitle">
       <nav>
@@ -23,7 +23,7 @@
       <div class="row ">
          <div class="col-4">
             <div class="service-image">
-               <img src="../../../assets/img/service.png" alt="">
+               <img src="assets/img/service.png" alt="">
             </div>
          </div>
          <div class="col-8 d-flex flex-column  justify-content-center align-items-between">
@@ -136,7 +136,6 @@
          </div>
       </div>
    </div>
-
 
    <div class="container-fluid bg-yellowish py-5">
       <div class="container">
