--- a/src/app/pages/pages-schemes-and-subsidies/pages-schemes-and-subsidies.component.html
+++ b/src/app/pages/pages-schemes-and-subsidies/pages-schemes-and-subsidies.component.html
@@ -1,13 +1,13 @@
 <main class="main" id="main">
 
-   <div class="banner">
+   <!-- <div class="banner">
       <div class="banner-title">
          <h4>Schemes & Subsidies</h4>
       </div>
       <div class="banner-subtitle">
          <h6>Building products is not our only job. We care about our clients.</h6>
       </div>
-   </div>
+   </div> -->
 
    <div class="pagetitle">
       <!-- <h1>Policy Adovcacy</h1> -->
