--- a/src/app/pages/pages-view-privacy-policy/pages-view-privacy-policy.component.css
+++ b/src/app/pages/pages-view-privacy-policy/pages-view-privacy-policy.component.css
@@ -93,6 +93,10 @@ h2 {
 }
 
 /* Pdf Viewer Class */
+.pdf-container{
+    background-color: rgba(215, 233, 250, 0.5);
+}
+
 .pdfViewer{
     display: block;
     /* width: 500px; */
