--- a/src/app/pages/pages-view-privacy-policy/pages-view-privacy-policy.component.html
+++ b/src/app/pages/pages-view-privacy-policy/pages-view-privacy-policy.component.html
@@ -57,7 +57,7 @@
                                                     <td class="d-flex gap-2">
                                                         <!-- <p class="badge p-2 bg-dark">Download</p> -->
                                                         <p class="badge p-2 bg-info"><a
-                                                                [routerLink]="['/pages-view-policy-adovcacy/', d.slug ]">View</a>
+                                                                [routerLink]="['/view-policy-adovcacy/', d.slug ]">View</a>
                                                         </p>
                                                         <p class="badge p-2 bg-success">Approved</p>
                                                     </td>
@@ -86,7 +86,7 @@
                                                     <td class="d-flex gap-2">
                                                         <!-- <p class="badge p-2 bg-dark">Download</p> -->
                                                         <p class="badge p-2 bg-info"><a
-                                                                [routerLink]="['/pages-view-policy-adovcacy/', d.slug ]">View</a>
+                                                                [routerLink]="['/view-policy-adovcacy/', d.slug ]">View</a>
                                                         </p>
                                                         <p class="badge p-2 bg-success">Approved</p>
                                                     </td>
@@ -125,7 +125,7 @@
             <div class="col-12 ">
                 <div class="card">
                     <div class="pdf-container">
-                        <pdf-viewer [src]="src" [fit-to-page]="true" [stick-to-page]="false" [autoresize]="false" [original-size]="true"
+                        <pdf-viewer [src]="src" [fit-to-page]="false" [stick-to-page]="true" [autoresize]="true" [original-size]="true"
                             [zoom-scale]="'page-width'" [show-all]="true" [page]="page" [render-text]="false"
                             class="pdfViewer" (after-load-complete)="pdfLoaded($event)" ></pdf-viewer>
                     </div>
