--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -153,7 +153,8 @@
       </ul>
    </nav>
    <div class="header-nav ms-auto">
-      <ul class="d-flex gap-4 align-items-center">
+      <ul class="d-flex gap-3 align-items-center">
+         <li> <a routerLink="dashboard">Dashboard</a></li>
          <li> <a routerLink="membership-form">Membership</a></li>
          <li> <a routerLink="policy-adovcacy"> Policy Adovcacy</a></li>
          <li> <a routerLink="regulaltory-support">Regulaltory Support</a> </li>
