--- a/src/app/pages/check/check.component.html
+++ b/src/app/pages/check/check.component.html
@@ -1,15 +1,16 @@
 <main id="main" class="main">
     <div class="container">
         <div class="row">
-            <div class="col-3">
+            <div class="col-4">
                 <div class="card">
                     <div class="card-body">
                         
+                        <div *ngFor="let i of items " >{{i.Sub_Category_name}}</div>
 
                     </div>
                 </div>
             </div>
-            <div class="col-9">
+            <div class="col-8">
                 <div class="card">
                     <div class="card-body">
 
